add services pages and button functionality

--- a/consultancy-website-template/html/about.html
+++ b/consultancy-website-template/html/about.html
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">About Us</h1>
-                <a href="">Home</a>
+                <a href="../index.html">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">About</a>
             </div>
@@ -151,7 +151,7 @@
                 <h1 class="display-5 mb-4">Welcome to  <span class="text-primary">MARYTECHENOCK</span></h1>
                 <h4 class="text-primary mb-4">MARYTECHENOCK SOLUTIONS CAN HELP YOU BUILD THE FUTURE.</h4>
                 <p class="mb-4">Use the expertise and deep tech background of the best minds at MARYTECHENOCK SOLUTIONS to create a comprehensive IT strategy for a digital and technological transformation of your organization that goes in line with your business objectives. Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies. When you invest in IT consulting, you’re investing in more than one time technology fix consulting with MARYTECHECNOCK offers you long term benefits that generate a substantial return on investment.</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Free Quote</a>
+                <a href="../index.html#quote-form" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Free Quote</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
