--- a/consultancy-website-template/html/pages/blog.html
+++ b/consultancy-website-template/html/pages/blog.html
@@ -30,7 +30,7 @@
     <link href="../../css/style.css" rel="stylesheet">
 </head>
 
-<div>
+<body>
     <!-- Topbar Start -->
     <div class="container-fluid bg-secondary ps-5 pe-0 d-none d-lg-block">
         <div class="row gx-0">
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Blog Grid</h1>
-                <a href="">Home</a>
+                <a href="../../index.html">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">Blog Grid</a>
             </div>
