--- a/consultancy-website-template/html/service.html
+++ b/consultancy-website-template/html/service.html
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Our Services</h1>
-                <a href="">Home</a>
+                <a href="../index.html">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">Services</a>
             </div>
@@ -126,7 +126,7 @@
                     </div>
                     <h3 class="mb-3">Digital Transformation Service</h3>
                     <p class="mb-0">Our consultants recognize there is no one-size-fits-all solution. We work with our clients to develop a tailored digital strategy and select a software to best support it.</p>
-                    <a href="../html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -136,7 +136,7 @@
                     </div>
                     <h3 class="mb-3">Web design and Development</h3>
                     <p class="mb-0">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/web-design-and-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -146,7 +146,7 @@
                     </div>
                     <h3 class="mb-3">Digital Marketing</h3>
                     <p class="mb-0">We specialize in designing and launch targeted Facebook, LinkedIn, Instagram, or Google ads, using an allocated Ads Budget, for increased engagement and a larger following, as and when the client advises, upon mutual agreement of the budget to be spent for such paid marketing.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -156,7 +156,7 @@
                     </div>
                     <h3 class="mb-3">Animation & 3D Product Designing</h3>
                     <p class="mb-0">We design 3D designs with three-dimensional models based on a client's specifications and requirements. Animation as service is ideal for businesses of all sizes, from startups to well-established companies. We specialize in animation video services and offer high-quality illustrations for all your marketing and social media necessities.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/animation-and-3d-product.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -164,9 +164,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 55px; height: 55px;">
                         <i class="-chart-area fa-2x"></i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h3 class="mb-3">Mobile and web Application developments</h3>
+                    <h3 class="mb-3">Mobile and Web Application development</h3>
                     <p class="mb-0">We deliver top-quality native mobile app development services to clients in various industries, we help to bring developed applications quickly to market. We build hybrid web application with standard web technologies such as, JavaScript, CSS, and HTML5 and we bundle them as app installation packages. </p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/mobile-and-web-app-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -174,9 +174,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 55px; height: 55px;">
                         <i class="-balance-scale fa-2x"></i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h3 class="mb-3">IT CONSULTING SERVICES </h3>
+                    <h3 class="mb-3">IT Consulting</h3>
                     <p class="mb-0">Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/it-consulting.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -186,7 +186,7 @@
                     </div>
                     <h3 class="mb-3">Search Engine Optimization (SEO)</h3>
                     <p class="mb-0">Get your website ranking higher in the search results, earn more qualified organic traffic and increase your website users. With our managed SEO services we offer On-Page and Off-Site customisable search engine optimisation campaigns that include a real-time dashboard so you can see the growth of your website.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/search-engine-optimization.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
         </div>
@@ -217,9 +217,13 @@
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
+                                    <option selected>Web design and Development</option>
+                                    <option value="1">Digital Transformation Service</option>
+                                    <option value="2">Digital Marketing</option>
+                                    <option value="3">Animation & 3D Product Designing</option>
+                                    <option value="4">Mobile and web Application developments</option>
+                                    <option value="5">IT CONSULTING SERVICES </option>
+                                    <option value="5">Search Engine Optimization (SEO) </option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
