--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -90,7 +90,7 @@
     <div class="container-fluid p-0">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item active carousel-max-height">
                     <img class="w-100" src="img/bg5.PNG" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1100px;">
@@ -99,12 +99,12 @@
                             <p data-animation="fadeInUp" data-delay="">We work step by step with you in your IT transformation journey. We thoroughly go through your IT requirements we don't apply a one size fits all approach. 
               We don't just deliver IT solutions and services, we help organizations realize their ambitious goals and dreams, with the main thrust of driving bold changes 
               in your Organization.</p>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Please Contact Us</a>
+                            <a href="#quote-form" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
+                            <a href="html/contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Please Contact Us</a>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-max-height">
                     <img class="w-100" src="img/bg6.PNG" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1100px;">
@@ -112,8 +112,8 @@
                             <h1 class="display-1 text-white mb-md-4">Your Leading Global Digital Transformation Expert </h1>
                             <p data-animation="fadeInUp" data-delay="">We understand that navigating into todays technology climate can be bit frustrating, especially within the digital transformation industry and key distinction required for it to be successful.
                             MARYTECHENOCK SOLUTIONS serves as an technology-agnostic advisor and collaborative partner to our client community. We provide unparallel industry expertise and proven methodologies to optimize any technology transformation and maximize business value. </p>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Please Contact Us</a>
+                            <a href="#quote-form" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
+                            <a href="html/contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Please Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                 <h1 class="display-5 mb-4">IT CONSULTING  <span class="text-primary">SERVICES</span></h1>
                 <h4 class="text-primary mb-4">MARYTECHENOCK SOLUTIONS CAN HELP YOU BUILD THE FUTURE</h4>
                 <p class="mb-4">Use the expertise and deep tech background of the best minds at MARYTECHENOCK SOLUTIONS to create a comprehensive IT strategy for a digital and technological transformation of your organization that goes in line with your business objectives. Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies. When you invest in IT consulting, you’re investing in more than one time technology fix consulting with MARYTECHECNOCK offers you long term benefits that generate a substantial return on investment.</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Free Quote</a>
+                <a href="#quote-form" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Free Quote</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -192,7 +192,7 @@
                     </div>
                     <h3 class="mb-3">Digital Transformation Service</h3>
                     <p class="mb-0">Our consultants recognize there is no one-size-fits-all solution. We work with our clients to develop a tailored digital strategy and select a software to best support it.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -202,7 +202,7 @@
                     </div>
                     <h3 class="mb-3">Web design and Development</h3>
                     <p class="mb-0">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/web-design-and-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -212,7 +212,7 @@
                     </div>
                     <h3 class="mb-3">Digital Marketing</h3>
                     <p class="mb-0">We specialize in designing and launch targeted Facebook, LinkedIn, Instagram, or Google ads, using an allocated Ads Budget, for increased engagement and a larger following, as and when the client advises, upon mutual agreement of the budget to be spent for such paid marketing.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -222,7 +222,7 @@
                     </div>
                     <h3 class="mb-3">Animation & 3D Product Designing</h3>
                     <p class="mb-0">We design 3D designs with three-dimensional models based on a client's specifications and requirements. Animation as service is ideal for businesses of all sizes, from startups to well-established companies. We specialize in animation video services and offer high-quality illustrations for all your marketing and social media necessities.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/animation-and-3d-product.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -230,9 +230,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 55px; height: 55px;">
                         <i class="-chart-area fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h3 class="mb-3">Mobile and web Application developments</h3>
+                    <h3 class="mb-3">Mobile and Web Application development</h3>
                     <p class="mb-0">We deliver top-quality native mobile app development services to clients in various industries, we help to bring developed applications quickly to market. We build hybrid web application with standard web technologies such as, JavaScript, CSS, and HTML5 and we bundle them as app installation packages. </p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/mobile-and-web-app-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -240,9 +240,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 55px; height: 55px;">
                         <i class="-balance-scale fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h3 class="mb-3">IT CONSULTING SERVICES </h3>
+                    <h3 class="mb-3">IT Consulting</h3>
                     <p class="mb-0">Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/it-consulting.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -252,7 +252,7 @@
                     </div>
                     <h3 class="mb-3">Search Engine Optimization (SEO)</h3>
                     <p class="mb-0">Get your website ranking higher in the search results, earn more qualified organic traffic and increase your website users. With our managed SEO services we offer On-Page and Off-Site customisable search engine optimisation campaigns that include a real-time dashboard so you can see the growth of your website.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="html/services/search-engine-optimization.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
         </div>
@@ -295,8 +295,8 @@
             <div class="col-lg-4">
                 <div class="d-block bg-primary h-100 text-center">
                     <img class="img-fluid" src="img/Marytech Logo_Red-02.png" alt="">
-                    <div class="p-4">We are passionate about our offerings and client satisfaction and it shows in the level of service that we provide. We are always willing to to help find the perfect solution for your needs. Contact us about any questions you have or even just some advice or a chat… Always Happy To Help!</p>
-                        <a href="" class="btn btn-light py-md-3 px-md-5 rounded-pill mb-2">Learn More</a>
+                    <div class="p-4" style="color: whitesmoke;">We are passionate about our offerings and client satisfaction and it shows in the level of service that we provide. We are always willing to to help find the perfect solution for your needs. Contact us about any questions you have or even just some advice or a chat… Always Happy To Help!</p>
+                        <a href="html/about.html" class="btn btn-light py-md-3 px-md-5 rounded-pill mb-2">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
 
 
     <!-- Quote Start -->
-    <div class="container-fluid bg-secondary px-0">
+    <div class="container-fluid bg-secondary px-0" id="quote-form">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Request A Free Quote</h1>
@@ -355,13 +355,12 @@
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="">
                                     <option selected>Web design and Development</option>
-                                    <option value="1">Digital Transformation Service<</option>
+                                    <option value="1">Digital Transformation Service</option>
                                     <option value="2">Digital Marketing</option>
                                     <option value="3">Animation & 3D Product Designing</option>
                                     <option value="4">Mobile and web Application developments</option>
                                     <option value="5">IT CONSULTING SERVICES </option>
-                                    <option value="5">Search Engine Optimization (SEO) </option>
-                                    
+                                    <option value="5">Search Engine Optimization (SEO) </option>    
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
