--- a/consultancy-website-template/html/pages/feature.html
+++ b/consultancy-website-template/html/pages/feature.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Features</h1>
-                <a href="">Home</a>
+                <a href="../../index.html">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">Features</a>
             </div>
